# HushMic

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/dpdfnet-ladspa/: Cargo.toml
crates/dpdfnet-ladspa/examples/: run-filter-chain.md
crates/dpdfnet-ladspa/src/: attn.rs  engine.rs  lib.rs  mode.rs  model.rs
crates/dpdfnet-ladspa/tests/: descriptor.rs  latency_probe.rs  parity.rs
crates/hushmic/: Cargo.toml
crates/hushmic/src/: about.rs  autostart.rs  branding.rs  config.rs  control.rs  controller.rs  diagnostics.rs  fsutil.rs  lib.rs  lock.rs  main.rs  mictest.rs  notify.rs  pipewire.rs  portal.rs  sandbox.rs  shortcuts.rs  tray.rs  watchdog.rs
crates/hushmic/src/abtest/: audio.rs  dsp.rs  metrics.rs  mod.rs  state.rs  stream.rs  types.rs  ui.rs
crates/hushmic/tests/: conf_gen.rs  config_roundtrip.rs  control_socket.rs  doctor_cli.rs  notify_dbus.rs  pw_parse.rs  shortcuts_portal.rs
docs/demo/: ASSETS.md  make-demos.py
live/: dpdfnet-mono.conf
packaging/: AppRun  PKGBUILD  build-release.sh  hushmic.desktop  hushmic.spec
packaging/aur-bin/: PKGBUILD
packaging/flatpak/: 50-hushmic-manager.conf  README.md  cargo-sources.json  io.github.fovty.HushMic.metainfo.xml  io.github.fovty.HushMic.yml  pipewire-remote-node-old-server-compat.patch
scripts/: check-glibc-floor.sh  gen-parity-fixtures.py  install.sh  setup-assets.sh
tests/fixtures/: golden_public_dpdfnet8.flac  noisy_public_48k.flac
